Use endicia package name for npm instead of node-endicia

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-endicia",
+  "name": "endicia",
   "version": "1.0.0",
   "description": "Node.js SDK for Endicia Label Server API",
   "main": "index.js",
