--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Node.js SDK for Endicia Label Server API",
   "main": "index.js",
   "scripts": {
-    "test": "npm test"
+    "test": "NODE_ENV='test' node ./node_modules/.bin/mocha ./test/ -R spec -t 35000"
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,8 @@
   "dependencies": {
     "assert": "^1.3.0",
     "bluebird": "^2.9.34",
+    "casual": "^1.4.7",
+    "mocha": "^2.2.5",
     "object-assign": "^3.0.0",
     "request": "^2.60.0",
     "xml2js": "^0.4.9",
